fixing z-index on navbar

--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,8 @@ nav {
   position: fixed;
   left: 0;
   top: 0;
-  background-color: rgba(255, 255, 255, 0.925); 
+  background-color: rgba(255, 255, 255, 0.972); 
+  z-index: 3;
 }
 
 .nav-logo {
